# vrdga-lanchpad

./: README.md  next.config.ts  package-lock.json  package.json
anchor/: Anchor.toml
anchor/programs/chess/: Cargo.toml
anchor/programs/chess/src/: error.rs  lib.rs
anchor/programs/chess/src/contexts/: clockwork_check_timer.rs  deposit.rs  initialize_game.rs  initialize_user.rs  join_game.rs  leave_game.rs  mod.rs  move_piece.rs  offer_draw.rs  resign.rs  withdraw.rs
anchor/programs/chess/src/models/: board.rs  castling_right.rs  color.rs  draw_state.rs  game_config.rs  game_state.rs  mod.rs  piece.rs  square.rs  time_control.rs
anchor/programs/chess/src/states/: game.rs  mod.rs  user.rs
anchor/programs/vrgda/: Cargo.toml
anchor/programs/vrgda/src/: error.rs  lib.rs  state.rs
anchor/programs/vrgda/src/instructions/: create.rs  mod.rs
anchor/programs/vrgda/src/math/: cast.rs  precise_number.rs  utils.rs
anchor/src/: chess-exports.ts  index.ts  vrgda-exports.ts
anchor/tests/: vrgda.test.ts
src/app/: layout.tsx  new-token.tsx  page.tsx
src/app/auction/[mintAddress]/: page.tsx
src/app/launch/: page.tsx
src/app/projects/: page.tsx
src/components/: app-footer.tsx  app-header.tsx  app-layout.tsx  app-providers.tsx  hero.tsx  search-bar.tsx  token-card.tsx  token-form.tsx  tokenLaunchForm.tsx  upcoming-launches.tsx
src/components/solana/: solana-provider.tsx
